--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -2,7 +2,8 @@
     text-decoration:none;    
 }
 .ulClass{
+    border:1px solid red;
     display:flex;
+    flex-direction:row;
     justify-content:space-around;
-
 }
